Build through tutorial step "Declaring a Winner"
Add JSDoc to reflect on current structure before "lifting" game
state into the Game component in order to track history.

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Connect to React Dev tools REMOVE FOR PRODUCTION -->
+    <script src="http://localhost:8097"></script>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta
